# common

./: CMakeLists.txt  README.md
.github/workflows/: cmake-multi-platform.yml
src/main/cpp/: .clang-tidy
src/main/cpp/include/common/: Accumulator.h  abort.h  assert.h  check.h  clock.h  common_jnicache.h  common_jniutils.h  error.h  file.h  jnicache.h  jniutils.h  json.inl  logging.h  map_utils.inl  math_utils.h  opengl_utils.h  platform.h  random.h  status.h  string_utils.h  transient_message.h  unusual_message.h  vector_utils.inl
src/main/cpp/lib/: Accumulator.cpp  CMakeLists.txt  abort.cpp  clock.cpp  clock.mm  common_jnicache.cpp  common_jniutils.cpp  error.cpp  file.cpp  jnicache.cpp  jniutils.cpp  logging.cpp  math_utils.cpp  opengl_utils.cpp  random.cpp  string_utils.cpp  transient_message.cpp  unusual_message.cpp
src/main/java/com/brentonbostick/common/: Clock.java  ExceptionUtils.java  FileUtils.java  InputStreamUtils.java  JSONUtils.java  Status.java  TransientMessage.java  UnusualMessage.java
src/test/cpp/: CMakeLists.txt  TestClock.cpp  TestMathUtils.cpp  TestStringUtils.cpp
src/test/java/com/brentonbostick/common/: InputStreamUtilsTest.java  JSONUtilsTest.java
